--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ p {
   }
 
   button {
-    bottom: 16%;
+    font-size: 16px;
+    padding: 16px;
   }
   /* #circle-container {
     bottom: 3%;
